--- a/sonde/package.json
+++ b/sonde/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./sondeStorage.js"
   },
   "dependencies": {
     "chokidar": "^3.5.3",
