--- a/sonde/package.json
+++ b/sonde/package.json
@@ -6,6 +6,7 @@
     "start": "node ./sondeStorage.js"
   },
   "dependencies": {
+    "@drivetech/node-nmea": "^2.0.1",
     "chokidar": "^3.5.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
