--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -21,9 +21,11 @@
     "core-js": "3.9.1",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
+    "leaflet": "^1.7.1",
     "tailwindcss": "2.0.4",
     "vue": "3.0.7",
-    "vue-router": "4.0.5"
+    "vue-router": "4.0.5",
+    "vue2-leaflet": "^2.7.1"
   },
   "devDependencies": {
     "@babel/core": "7.13.10",
