--- a/services/storedata.service
+++ b/services/storedata.service
@@ -7,6 +7,7 @@ Group=pi
 WorkingDirectory=/home/pi/ProjetMeteo/sonde
 #ExecStartPre=/usr/bin/npm install
 ExecStart=/usr/bin/npm start
+Restart=on-abnormal
 
 [Install]
 WantedBy=multi-user.target
